# pystatistics

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hatch_build.py  pyproject.toml  refactor_architecture.py
.github/workflows/: publish.yml
.release/: CHECKLIST.md  UNRELEASED.md  release.py
benchmarks/: mvnmle_bench.py  mvnmle_gpu_per_eval.py
docs/: CYTHON_MIGRATION_PROPOSAL.md  DESIGN.md  Forge.md  GPU_NOTES.md  MICE_GPU_WIP.md  MPS_LINALG_TODO.md  PYSTATSBIO_CONTEXT.md  ROADMAP.md  anova.rst  conf.py  core.rst  descriptive.rst  gam.rst  hypothesis.rst  index.rst  mixed.rst  montecarlo.rst  multinomial.rst  multivariate.rst  mvnmle.rst  ordinal.rst  regression.rst  survival.rst  timeseries.rst
pystatistics/: CONVENTIONS.md  GPU_BACKEND_CONVENTION.md  __init__.py
pystatistics/anova/: __init__.py  _common.py  _contrasts.py  _levene.py  _posthoc.py  _repeated.py  _ss.py  design.py  solution.py  solvers.py
pystatistics/core/: __init__.py  capabilities.py  datasource.py  encoding.py  exceptions.py  protocols.py  result.py  validation.py
pystatistics/descriptive/: __init__.py  _missing.py  _quantile_types.py  design.py  solution.py  solvers.py
pystatistics/gam/: __init__.py  _basis.py  _basis_cc.py  _basis_common.py  _basis_cr.py  _basis_md.py  _basis_ps.py  _basis_te.py  _basis_tp.py  _common.py  _constraints.py  _criteria.py  _edf.py  _factor_by.py  _fit.py  _gam.py  _gcv.py  _gradient.py  _gradient_glm.py  _penalty_group.py  _pirls.py  _smooth.py  _smooth_test.py  _tensor_smooth.py  solution.py
pystatistics/hypothesis/: __init__.py  _common.py  _design_factories.py  _p_adjust.py  design.py  solution.py  solvers.py
pystatistics/longitudinal/: __init__.py  design.py  solution.py  solvers.py
pystatistics/mice/: __init__.py  _chain.py  _encode.py  _rng.py  _visit.py  datasets.py  design.py  pooling.py  solution.py  solvers.py
pystatistics/mixed/: __init__.py  _common.py  _deviance.py  _glmm_optimizer.py  _glmm_pirls.py  _grm_cpu.py  _optimizer.py  _pirls.py  _pls.py  _pls_structured.py  _random_effects.py  _satterthwaite.py  _struct_batched.py  _struct_sparse.py  design.py  grm.py  grm_solution.py  solution.py  solvers.py
pystatistics/montecarlo/: __init__.py  _ci.py  _common.py  _influence.py  design.py  solution.py  solvers.py
pystatistics/multinomial/: __init__.py  _common.py  _likelihood.py  _solver.py  solution.py
pystatistics/multivariate/: __init__.py  _common.py  _factor.py  _pca.py  _rotation.py
pystatistics/mvnmle/: __init__.py  _degeneracy.py  _monotone.py  _utils.py  datasets.py  design.py  mcar_test.py  patterns.py  solution.py  solvers.py
pystatistics/nonparametric_mcar/: __init__.py  hsic.py  missmech.py  propensity.py  result.py
pystatistics/ordinal/: __init__.py  _common.py  _information.py  _likelihood.py  _solver.py  solution.py
pystatistics/regression/: __init__.py  _analysis.py  _families_extra.py  _formatting.py  _glm.py  _inputs.py  _linear.py  _links_extra.py  _nb_theta.py  _penalty.py  _profile.py  _simple_ols.py  design.py  families.py  solution.py  solvers.py  terms.py
pystatistics/survival/: __init__.py  _common.py  _concordance_fenwick.pyx  _concordance_kernel.py  _concordance_ref.py  _cox.py  _cox_newton.py  _cox_robust.py  _cox_strata.py  _cox_zph.py  _discrete.py  _km.py  _km_strata.py  _logrank.py  _solution_cox.py  _solution_discrete.py  _solution_km.py  _solution_logrank.py  design.py  solution.py  solvers.py
pystatistics/timeseries/: __init__.py  _acf.py  _adf_mackinnon.py  _arima_batch.py  _arima_batch_contract.py  _arima_factored.py  _arima_fit.py  _arima_forecast.py  _arima_init.py  _arima_kalman.py  _arima_kalman_kernel.pyx  _arima_kalman_ref.py  _arima_likelihood.py  _arima_order.py  _arima_solution.py  _arima_xreg.py  _common.py  _decomposition.py  _differencing.py  _ets_fit.py  _ets_forecast.py  _ets_kernels.py  _ets_models.py  _ets_recursion.pyx  _ets_result.py  _ets_select.py  _forecast_common.py  _loess.py  _stationarity.py  _stl.py  _stl_core.py  _stl_kernels.pyx  _stl_ref.py  _stl_robust.py  _whittle.py
tests/: benchmark_gpu.py  conftest.py  test_code_quality.py  tmp.py
tests/anova/: conftest.py  test_contrasts.py  test_design.py  test_effectsizes_gameshowell.py  test_factorial.py  test_levene.py  test_oneway.py  test_posthoc.py  test_r_validation.py  test_repeated_measures.py
tests/core/: test_backend.py  test_datasource.py  test_exceptions.py  test_qr_solve.py  test_repr_html.py  test_result.py  test_torch_interop.py  test_validation.py
tests/descriptive/: conftest.py  test_backend_convention.py  test_cor.py  test_cov.py  test_describe.py  test_gpu.py  test_missing.py  test_moments.py  test_quantile.py  test_r_validation.py
tests/fixtures/: adf_statsmodels_reference.json  anova_ancova_meta.json  anova_ancova_r_results.json  anova_bonferroni_meta.json  anova_bonferroni_r_results.json  anova_effectsizes_gameshowell.json  anova_eta_meta.json  anova_eta_r_results.json  anova_levene_meta.json  anova_levene_r_results.json  anova_oneway_balanced_meta.json  anova_oneway_balanced_r_results.json  anova_oneway_unbalanced_meta.json  anova_oneway_unbalanced_r_results.json  anova_rm_mixed_meta.json  anova_rm_within_meta.json  anova_rm_within_r_results.json  anova_tukey_meta.json  anova_tukey_r_results.json  anova_twoway_balanced_meta.json  anova_twoway_balanced_r_results.json  anova_twoway_unbalanced_meta.json  anova_twoway_unbalanced_r_results.json  arima_ic_r_reference.json  arima_kalman_r_reference.json  arima_xreg_r_reference.json  basic_100x3.csv  basic_100x3_meta.json  basic_100x3_r_results.json  collinear_almost.csv  collinear_almost_meta.json  collinear_almost_r_results.json  desc_basic_100x5.csv  desc_basic_100x5_meta.json  desc_basic_100x5_r_results.json  desc_constant_column.csv  desc_constant_column_meta.json  desc_constant_column_r_results.json  desc_extreme_values.csv  (+204 more)
validation/: README.md  pyproject.toml
validation/pystatsval/: __init__.py  device.py  estimates.py  measure.py  record.py  rrunner.py  serialize.py  timing.py
validation/tests/: test_harness.py
(+351 files in other folders)
