[build-system]
requires = ["hatchling", "cython>=3.0", "numpy>=1.24", "setuptools>=64"]
build-backend = "hatchling.build"

[project]
name = "pystatistics"
version = "5.1.0"
description = "GPU-accelerated statistical computing for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hai-Shuo Shu", email = "contact@sgcx.org" },
]
keywords = [
    "statistics",
    "regression",
    "maximum-likelihood",
    "gpu",
    "clinical-trials",
    "biostatistics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    # numba: required for the JIT'd ARIMA Kalman filter in
    # pystatistics/timeseries/_arima_kalman.py. SARIMA exact-ML fitting
    # runs a dense inner loop at small state dimension (r <= ~25) where
    # pure-numpy per-call overhead dominates. Numba closes the gap with
    # R's Fortran arima.c by ~20x. See CHANGELOG.
    "numba>=0.59",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "furo",
]
all = [
    "pystatistics[gpu,dev,docs]",
]

[project.urls]
Homepage = "https://sgcx.org/technology/pystatistics/"
Documentation = "https://sgcx.org/docs/pystatistics/"
Repository = "https://github.com/sgcx-org/pystatistics"
Issues = "https://github.com/sgcx-org/pystatistics/issues"

[tool.hatch.build.targets.wheel]
packages = ["pystatistics"]
# Compiled Cython kernels produced by hatch_build.py (platform-specific).
artifacts = [
    "pystatistics/**/*.so",
    "pystatistics/**/*.pyd",
]
# The generated C is build scratch — the .so is what ships. Keep it out of the
# wheel (it regenerates from the .pyx in an sdist build).
exclude = [
    "pystatistics/**/*.c",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# Ship the Cython sources so the sdist can be rebuilt where a compiler exists.
include = [
    "pystatistics/**/*.py",
    "pystatistics/**/*.pyx",
    "hatch_build.py",
    "README.md",
    "LICENSE",
]

[tool.cibuildwheel]
# Launch matrix scope (see docs/CYTHON_MIGRATION_PROPOSAL.md §11 Q4):
# glibc-Linux + macOS only. musl and Windows are deliberately excluded and
# added later on demand.
build = "cp311-* cp312-* cp313-*"
# Only CPython is built (above), so no PyPy selector is needed. musl, 32-bit,
# Windows, and Intel-macOS (EOL) are excluded per the launch-matrix decision.
# `*-macosx_x86_64` encodes the "no Intel Mac" policy in the build config so it
# holds even if a wheel build is ever run on an Intel host — it does NOT match
# linux `*-manylinux_x86_64`.
skip = "*-musllinux_* *_i686 *-win* *-macosx_x86_64"
build-frontend = "build"
# Every wheel is verified in-place: the bit-identity parity test is the guard
# that the platform's compiler honored -ffp-contract=off; the R-parity test is
# the numerical gate. If parity fails on a wheel, that wheel's FP flags are
# wrong — fix the build, never relax the test.
test-requires = ["pytest", "scipy", "numba"]
test-command = "KMP_DUPLICATE_LIB_OK=TRUE pytest {project}/tests/timeseries/test_arima_kalman_cython_parity.py {project}/tests/timeseries/test_arima_kalman_r_parity.py {project}/tests/timeseries/test_arima_workspace_fit_regression.py -q"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: marks tests as slow (GPU stress, large-scale). Deselected by default. Run with: pytest -m slow",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true
